fix: hide scrollbar in carousal container

--- a/any-carousal/packages/react-any-carousal/src/carousel.css
+++ b/any-carousal/packages/react-any-carousal/src/carousel.css
@@ -13,6 +13,15 @@
   scroll-behavior: smooth;
   gap: 1rem;
   padding-inline: 1rem; /* 👈 side gutters */
+  -ms-overflow-style: none;
+
+
+  overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .carousel-container > * {
@@ -22,6 +31,7 @@
 
 .nav-button {
   position: absolute;
+  z-index: 1;
 }
 
 .nav-button.left {
